# RubikGpuBenchmark

./: CMakeLists.txt  README.md  main.cpp  snapcraft.yaml
